# neotune

./: .env.example  .gitignore  README.md  REFACTORING_SUMMARY.md  app.py  cli.py  pyproject.toml  requirements.txt  test_auth_standalone.py  test_input_block.py  test_prompt.py
doc/: core.md
docs/: configuration.md  plan.md  spotify_api_overview.md
docs/endpoints/: albums.md  artists.md  player.md  playlists.md  search.md  tracks.md  users.md
lua/: audio.lua  commands.lua  debug.lua  init.lua  keymaps.lua  special_playlists.lua  theme.lua
src/actions/: __init__.py  auth_actions.py  health_check.py
src/cli/: cli_app.py
src/config/: client_config.py  user_prefs.py
src/core/: activity_service.py  cache.py  command_service.py  constants.py  debug_logger.py  di.py  icons.py  logging_config.py  strings.py  utils.py
src/core/debug/: decorators.py  models.py  service.py
src/hooks/: spotify_hooks.py  track_actions.py  useAutoPlay.py  useCopyToClipboard.py  useDaemonService.py  useEnsureActiveDevice.py  useFetchAlbumTracks.py  useFetchPlaylistTracks.py  useGetActiveDevice.py  useHealthCheck.py  useLogout.py  usePlayTrack.py  usePrefetcher.py  useRefreshData.py  useRemoveTrack.py  useSaveTrack.py  useSpotifySearch.py  useSwitchToLocalPlayer.py  useTargetedRetry.py  useTrackRadio.py  useUpdateNowPlaying.py
src/models/: __init__.py  config.py  enums.py  spotify.py  types.py
src/network/: auth_server.py  auth_service.py  base.py  discovery_service.py  library_service.py  local_player.py  playback_service.py  spotify_network.py
src/state/: app_state.py  base_store.py  feature_stores.py  pubsub.py  store.py
src/ui/: terminal_renderer.py  themes.py
src/ui/components/: notification.py  now_playing.py  sidebar.py  status_bar.py  track_table.py
src/ui/components/content_tree/: content_tree.py  tree_nodes.py
src/ui/modals/: audio_modals.py  base.py  command_prompt.py  confirmation.py  log_modal.py  telescope.py  theme_selector.py  track_menu.py  which_key.py
src/ui/modals/debug/: input.py  modal.py  tabs.py
src/ui/modals/fuzzy_finder/: __init__.py
src/ui/modals/telescope/: __init__.py  header.py  preview.py  results.py  tabs.py
src/ui/screens/: login.py  player_auth.py  setup.py
styles/: _base.tcss  _fuzzy.tcss  _main_view.tcss  _modals.tcss  _now_playing.tcss  _onboarding.tcss  _status_bar.tcss  _telescope.tcss  main.tcss
