[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neotune"
version = "0.1.0"
description = "A sleek, Neovim-inspired Spotify client for the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.5",
    "click>=8.3.1",
    "cryptography>=46.0.5",
    "idna>=3.11",
    "jaraco.classes>=3.4.0",
    "jaraco.context>=6.1.0",
    "jaraco.functools>=4.4.0",
    "jeepney>=0.9.0",
    "keyring>=25.7.0",
    "keyrings.alt>=5.0.2",
    "linkify-it-py>=2.1.0",
    "lupa>=2.6",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "mdurl>=0.1.2",
    "more-itertools>=10.8.0",
    "platformdirs>=4.9.4",
    "psutil>=7.2.2",
    "pycparser>=3.0",
    "Pygments>=2.19.2",
    "python-dotenv>=1.2.2",
    "PyYAML>=6.0.3",
    "redis>=7.2.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "SecretStorage>=3.5.0",
    "spotipy>=2.26.0",
    "textual>=8.0.2",
    "tomli>=2.4.0",
    "tomli_w>=1.2.0",
    "typing_extensions>=4.15.0",
    "uc-micro-py>=2.0.0",
    "urllib3>=2.6.3",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.6",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
]

[project.scripts]
neotune = "app:main"

[tool.setuptools]
packages = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "spotipy.*",
    "lupa.*",
    "textual.*",
    "keyring.*",
]
ignore_missing_imports = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]
line-length = 100

target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]  # No docstring requirement for tests

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
